# uniffi_trait

./: Cargo.toml  test.py  try.sh
src/: lib.rs
