[package]
name = "uniffi_trait"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.25.3", features = ["build", "cli"] }


[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


# with or without patch there is an error about missing _pointer
[patch.crates-io]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "f3f7cccfc1dc5adb65d85473830a229b87244dd6" }
